# SparkEngine

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Code/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
Engine/Code/Editor/Component/: AllUIElement.h  Position.h  Reflect.h  Tags.h
Engine/Code/Editor/Input/: EditorInput.cpp  EditorInput.h
Engine/Code/Editor/Private/Components/: Reflect.h
Engine/Code/Editor/UI/: EditorUI.cpp  EditorUI.h  EditorWindow.cpp  EditorWindow.h
Engine/Code/Editor/UI/Private/: BottomPanel.cpp  BottomPanel.h  ComponentView.cpp  ComponentView.h  Inspector.cpp  Inspector.h  MenuBar.cpp  MenuBar.h  SceneView.cpp  SceneView.h
Engine/Code/RunTime/: CMakeLists.txt  Engine.cpp  Engine.h  EngineExecContext.h
Engine/Code/RunTime/Core/: CMakelists.txt  Reflect.h
Engine/Code/RunTime/Core/CoreComponents/: Name.h  Tags.h
Engine/Code/RunTime/Core/EASTLEX/: Vsnprintf.cpp  hash.h
Engine/Code/RunTime/Core/EBus/: EBus.h  Result.h
Engine/Code/RunTime/Core/EBus/Private/: CallstackEntry.h  Container.h  Dispatcher.h  EBusImpl.h  Handlers.h  Polices.h  QueueDispatcher.h  StoragePolices.h
Engine/Code/RunTime/Core/ECS/: Entity.h  ISystem.h  NameComponent.h  Tag.h  WorldContext.h
Engine/Code/RunTime/Core/ECS/Bus/: ComponentEventBus.h  EntityEventBus.h
Engine/Code/RunTime/Core/EntityReaper/: EntityReaper.h
Engine/Code/RunTime/Core/HashString/: HashString.h
Engine/Code/RunTime/Core/Log/: ILogSystem.h  SpdLogSystem.cpp  SpdLogSystem.h
Engine/Code/RunTime/Core/Math/: Bit.h  Interval.cpp  Interval.h  Matrix3X3.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
Engine/Code/RunTime/Core/Memory/: IAllocator.h  Memory.cpp  Memory.h
Engine/Code/RunTime/Core/Object/: Base.h  IObjectFactory.h  Object.cpp  Object.h  ObjectCollector.h  ObjectName.h  ObjectPool.h  ObjectStorage.h
Engine/Code/RunTime/Core/Reflection/: RTTI.h  ReflectContext.h  TypeRegistry.cpp  TypeRegistry.h  Utility.h
Engine/Code/RunTime/Core/SceneManager/: EntityHierarchy.h  IScene.h  SceneManager.cpp  SceneManager.h
Engine/Code/RunTime/Core/SceneManager/Component/: HierarchyComponent.h
Engine/Code/RunTime/Core/Serialization/: MetaTypeTraits.h  UIElement.h
Engine/Code/RunTime/Core/Service/: Service.h
Engine/Code/RunTime/Core/Tick/: TickBus.h  TickOrder.h
Engine/Code/RunTime/Feature/Input/: CMakeLists.txt  GLFWCaptureSystem.cpp  GLFWCaptureSystem.h  InputCaptureSystem.cpp  InputCaptureSystem.h  InputEvent.h  InputSystem.cpp  InputSystem.h
Engine/Code/RunTime/Feature/Input/Bus/: InputEventBus.h
Engine/Code/RunTime/Feature/Render/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.h
Engine/Code/RunTime/Feature/Render/RHI/: Base.h  CMakeLists.txt  ClearValue.cpp  ClearValue.h  Factory.h  Format.cpp  Format.h  HardwareQueue.h  Limits.h  MemoryEnums.h  MultisampleState.cpp  MultisampleState.h  Origin.h  RHILimits.h  Size.cpp  Size.h  ValidationLayer.h  stub.cpp
Engine/Code/RunTime/Feature/Render/RHI/Backend/DX12/: CMakeLists.txt  Conversions.cpp  Conversions.h  D3D12Factory.h  DX12.cpp  DX12.h  Memory.h  MemoryView.cpp  MemoryView.h
Engine/Code/RunTime/Feature/Render/RHI/Backend/DX12/Descriptor/: Descriptor.cpp  Descriptor.h  DescriptorContext.cpp  DescriptorContext.h  DescriptorFactory.cpp  DescriptorFactory.h  DescriptorPool.cpp  DescriptorPool.h
Engine/Code/RunTime/Feature/Render/RHI/Backend/DX12/Device/: Device.cpp  Device.h  PhysicalDevice.cpp  PhysicalDevice.h  ReleaseQueue.h
Engine/Code/RunTime/Feature/Render/RHI/Backend/DX12/Resource/: ResourcePoolResolver.h
Engine/Code/RunTime/Feature/Render/RHI/Backend/DX12/Resource/Buffer/: Buffer.cpp  Buffer.h  BufferMemoryView.cpp  BufferMemoryView.h  BufferPool.cpp  BufferPool.h  BufferView.cpp  BufferView.h
Engine/Code/RunTime/Feature/Render/RHI/Backend/DX12/Resource/Image/: Image.h
Engine/Code/RunTime/Feature/Render/RHI/Bus/: FrameEventBus.h
Engine/Code/RunTime/Feature/Render/RHI/Device/: Device.cpp  Device.h  DeviceDescriptor.h  DeviceFeatures.h  DeviceLimits.h  DeviceObject.cpp  DeviceObject.h  PhysicalDevice.h  PhysicalDeviceDescriptor.h  VariableRateShadingEnums.h
Engine/Code/RunTime/Feature/Render/RHI/Resource/: Resource.cpp  Resource.h  ResourcePool.cpp  ResourcePool.h  ResourcePoolDescriptor.h  ResourceView.cpp  ResourceView.h  ResourceViewCache.h
Engine/Code/RunTime/Feature/Render/RHI/Resource/Buffer/: Buffer.cpp  Buffer.h  BufferBindFlags.h  BufferDescriptor.h  BufferFactory.h  BufferFactoryDescriptor.h  BufferPool.cpp  BufferPool.h  BufferPoolDescriptor.h  BufferView.cpp  BufferView.h  BufferViewDescriptor.cpp  BufferViewDescriptor.h
Engine/Code/RunTime/Feature/Render/RHI/Resource/Image/: Image.cpp  Image.h  ImageDescriptor.cpp  ImageDescriptor.h  ImageEnum.cpp  ImageEnums.h  ImagePool.cpp  ImagePool.h  ImagePoolBase.cpp  ImagePoolBase.h  ImagePoolDescriptor.h  ImageSubResource.h  ImageSubresource.cpp  ImageView.cpp  ImageView.h  ImageViewDescriptor.cpp  ImageViewDescriptor.h  StreamingImagePool.cpp  StreamingImagePool.h  StreamingImagePoolDescriptor.h
Engine/Code/RunTime/Feature/Render/RHI/Resource/Sampler/: SamplerState.cpp  SamplerState.h
Engine/Code/RunTime/Feature/Render/RHI/Resource/ShaderResource/: InputStreamLayout.cpp  InputStreamLayout.h  InputStreamLayoutBuilder.cpp  InputStreamLayoutBuilder.h  ShaderSemantic.cpp  ShaderSemantic.h  StreamBufferView.cpp  StreamBufferView.h
Engine/Code/RunTime/Feature/UI/: CMakelists.txt  UIBaseSystem.cpp  UIBaseSystem.h  UIElement.h
Engine/Code/RunTime/Feature/Window/: IWindowSystem.h
Engine/Code/RunTime/Platform/Windows/Editor/UI/: GetNativeWindowHandle.h
Engine/Code/RunTime/Platform/Windows/RunTime/Core/Memory/: Memory.h
Engine/Code/Test/Core/: CMakeLists.txt  EASTLTest.cpp  EBusTest.cpp  ECSTest.cpp  LogTest.cpp  ReflectionTest.cpp  SceneManagerTest.cpp  test_main.cpp
